--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0"
+        "slevomat/coding-standard": "^8.13",
+        "spatie/laravel-ignition": "^1.0",
+        "squizlabs/php_codesniffer": "3.*"
     },
     "autoload": {
         "psr-4": {
@@ -45,6 +47,12 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "test": [
+            "phpcs --ignore=. --standard=ruleset.xml ."
+        ],
+        "fix": [
+            "phpcbf --ignore=. --standard=ruleset.xml ."
         ]
     },
     "extra": {
@@ -57,7 +65,8 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "allow-plugins": {
-            "pestphp/pest-plugin": true
+            "pestphp/pest-plugin": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
     },
     "minimum-stability": "dev",
